# BSVision

./: .gitignore  CMakeLists.txt  README.md  UiStyle.camera.qss  UiStyle.qss  framework.ParaDef.json  main.cpp  mainWindow.serviceMapDef.json  mainWindow.uidef.json  messageBox.uidef.json  qml.qrc  res.rcc  sysParamDialog.serviceMapDef.json  sysParamDialog.uidef.json  user.ParaDef.json  visionApplication.cpp  visionApplication.h  visionMainWindow.cpp  visionMainWindow.h
plugins/: CMakeLists.txt  app.ParaDef.json  camera.ParaDef.json  dllInfo.rc.in  pluginCoreDef.h  pluginDef.h
plugins/clipper2/: CMakeLists.txt  clipper.core.h  clipper.engine.cpp  clipper.engine.h  clipper.export.h  clipper.h  clipper.minkowski.h  clipper.rectclip.cpp  clipper.rectclip.h  clipperTool.h
plugins/engineService/: engineService.h
plugins/engineService/hzgEngine/: CMakeLists.txt  UiStyle.hzg.qss  hzgEngine.cpp  hzgEngine.h  qssDef.h
plugins/engineService/hzgEngine/widget/: mainWidget.cpp  mainWidget.h
plugins/engineService/jczEngine/: CMakeLists.txt  UiStyle.jcz.qss  jczEngine.cpp  jczEngine.h  qssDef.h
plugins/engineService/jczEngine/widget/: mainWidget.cpp  mainWidget.h  markItemWidget.cpp  markItemWidget.h  markTemplateWidget.cpp  markTemplateWidget.h  markWidget.cpp  markWidget.h  workWidget.cpp  workWidget.h
plugins/imageProcess/: CMakeLists.txt  engineDef.cpp  engineDef.h
plugins/imageProcess/stationProcess/: CMakeLists.txt  featureInfoDef.h
plugins/system/: CMakeLists.txt  basic.cpp  basic.h  camera.h  myMath.h  toolFun.cpp  toolFun.h
plugins/system/tool/: fileTool.cpp  fileTool.h
plugins/template/: CMakeLists.txt  iTemplate.cpp  iTemplate.h  markParaDef.cpp  markParaDef.h  templateCreater.cpp  templateCreater.h  templateDef.cpp  templateDef.h  templateHelper.cpp  templateHelper.h
plugins/template/paraTemplate/: CMakeLists.txt  paraTemplate.cpp  paraTemplate.h  paraTemplateMarkPara.cpp  paraTemplateMarkPara.h
plugins/template/paraTemplate/markWidget/: CMakeLists.txt  circleMarkWidget.cpp  circleMarkWidget.h
plugins/template/shapeTemplate/: BSShapeTemplateEngine.qrc  CMakeLists.txt  shapeDef.cpp  shapeDef.h  shapeResDef.h  shapeTemplate.cpp  shapeTemplate.h  shapeTemplateMarkPara.cpp  shapeTemplateMarkPara.h
plugins/template/shapeTemplate/editWidget/: editWidget.cpp  editWidget.h  idToolButton.cpp  idToolButton.h  shapesWidget.cpp  shapesWidget.h
plugins/template/shapeTemplate/editWidget/graphics/: CMakeLists.txt  booleanItemDef.cpp  booleanItemDef.h  booleanScene.cpp  booleanScene.h
plugins/template/shapeTemplate/editWidget/graphics/fitItem/: fitCircleItem.cpp  fitCircleItem.h  fitDef.cpp  fitDef.h  fitLineCenterToolItem.cpp  fitLineCenterToolItem.h  fitLineItem.cpp  fitLineItem.h  fitRectToolItem.cpp  fitRectToolItem.h  fitRightAngleToolItem.cpp  fitRightAngleToolItem.h  fitToolItem.cpp  fitToolItem.h
plugins/template/shapeTemplate/editWidget/graphics/positioningTool/: CMakeLists.txt  positioningTool.cpp  positioningTool.h  positioningToolDef.cpp  positioningToolDef.h
plugins/template/shapeTemplate/editWidget/graphics/positioningTool/lineCenter/: CMakeLists.txt  lineCenterItem.cpp  lineCenterItem.h  lineCenterTool.cpp  lineCenterTool.h
plugins/template/shapeTemplate/editWidget/graphics/positioningTool/rightAngle/: CMakeLists.txt  rightAngleItem.cpp  rightAngleItem.h  rightAngleTool.cpp  rightAngleTool.h
plugins/template/shapeTemplate/editWidget/graphics/positioningTool/twoCircle/: CMakeLists.txt  twoCircleTool.cpp  twoCircleTool.h
plugins/template/shapeTemplate/editWidget/wizard/: createPosWizard.cpp  createPosWizard.h  createShapeWizard.cpp  createShapeWizard.h  shapeExpandParaWidget.cpp  shapeExpandParaWidget.h  wizard.cpp  wizard.h  wizardDef.h
plugins/template/visionEngine/: FindBSCV.cmake  bscvTool.cpp  bscvTool.h
plugins/ui/: CMakeLists.txt  basic.cpp  basic.h  showImageLabel.cpp  showImageLabel.h
plugins/ui/editLabel/: CMakeLists.txt  editLabel.cpp  editLabel.h
plugins/ui/graphicsView/: CMakeLists.txt  imageView.cpp  imageView.h  regionDef.h  regionView.cpp  regionView.h
plugins/ui/graphicsView/graphics/: CMakeLists.txt  sceneDef.cpp  sceneDef.h
plugins/ui/graphicsView/graphics/itemScene/: CMakeLists.txt  iItemScene.cpp  iItemScene.h  positionScene.cpp  positionScene.h  templateScene.cpp  templateScene.h
plugins/ui/graphicsWidget/: CMakeLists.txt  editTemplateWidget.cpp  editTemplateWidget.h  iGraphicsWidget.cpp  iGraphicsWidget.h  previewImageDialog.cpp  previewImageDialog.h
plugins/ui/graphicsWidget/setTemplateParaWindow/: CMakeLists.txt  setCreateParaWindow.cpp  setCreateParaWindow.h  setMatchParaWindow.cpp  setMatchParaWindow.h  setTemplateParaWindow.cpp  setTemplateParaWindow.h
plugins/ui/iconTextButton/: CMakeLists.txt  iconTextButton.cpp  iconTextButton.h
plugins/ui/imageWidget/: CMakeLists.txt  itemImageWidget.cpp  itemImageWidget.h  measureImageWidget.cpp  measureImageWidget.h  roiDelegate.cpp  roiDelegate.h  showImageWidget.cpp  showImageWidget.h
plugins/ui/projectEditWidget/: CMakeLists.txt  projectEditWidget.cpp  projectEditWidget.h
plugins/ui/projectEditWidget/featureParaEdit/: CMakeLists.txt  featureParaEdit.cpp  featureParaEdit.h  shapeTemplateEdit.cpp  shapeTemplateEdit.h
plugins/ui/projectEditWidget/featureParaEdit/navigationBar/: CMakeLists.txt  navigationBar.cpp  navigationBar.h
plugins/ui/projectEditWidget/stationWidget/: CMakeLists.txt  featureIconButton.cpp  featureIconButton.h  stationWidget.cpp  stationWidget.h
plugins/ui/workWidget/: CMakeLists.txt  measureWorkWidget.cpp  measureWorkWidget.h  stdWorkWidget.cpp  stdWorkWidget.h
